# pg-fast-merging

./: CMakeLists.txt  README.md  dataset.py  dtype.h  graph.h  main.cpp  merge.h  metric.h  nndescent.h  nsw.h  taumng.h  vamana.h
src/: CMakeLists.txt  dataset.cpp  dtype.cpp  evaluator.cpp  fgim.cpp  graph.cpp  hnsw.cpp  index.cpp  kmeans.cpp  logger.cpp  merge.cpp  metric.cpp  mgraph.cpp  nndescent.cpp  nnmerge.cpp  nsw.cpp  output.cpp  taumng.cpp  timer.cpp  utils.cpp  vamana.cpp  visittable.cpp
src/include/: annslib.h  dataset.h  dtype.h  evaluator.h  fgim.h  graph.h  hnsw.h  index.h  kmeans.h  logger.h  merge.h  metric.h  mgraph.h  nndescent.h  nnmerge.h  nsw.h  output.h  taumng.h  timer.h  utils.h  vamana.h  visittable.h
tests/: CMakeLists.txt  test_index_construction.cpp  test_merge_from_raw.cpp  test_merge_two_pg_indexes.cpp  test_merging_graphs.cpp  test_merging_implemented_algorithms.cpp
