add_executable(test_merging_implemented_algorithms test_merging_implemented_algorithms.cpp)
target_link_libraries(test_merging_implemented_algorithms ${PROJECT_NAME})

add_executable(test_merging_graphs test_merging_graphs.cpp)
target_link_libraries(test_merging_graphs ${PROJECT_NAME})

add_executable(test_index_construction test_index_construction.cpp)
target_link_libraries(test_index_construction ${PROJECT_NAME})